media player visuals fixing on mobile

--- a/src/screen_parts/desktop/Window_contents/Media_player/Media_player.module.css
+++ b/src/screen_parts/desktop/Window_contents/Media_player/Media_player.module.css
@@ -7,18 +7,24 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 5.8% 2.1% 6.6% 1.4% 0.6% 4.2% 66.8% auto;
+  grid-template-columns: 5.8% 2.1% 6.6% 1.4% 0.6% 4.2% 62.3% auto 0.5%;
   grid-template-rows: 4% 18.5% 66% 2.6% 1.7% 2.5% 3.6% auto;
   grid-template-areas: 
-  ". . . . . . . ."
-  ". . . . . . . ."
-  ". . . . . . . track-select"
-  ". . . . . . . ."
-  ". . . . . . . ."
-  ". . . . . . . ."
-  ". play-pause . mute-un-mute . volume . ."
-  ". . . . . . . .";
+  ". . . . . . . . ."
+  ". . . . . . . track-select ."
+  ". . . . . . . track-select ."
+  ". . . . . . . . ."
+  ". . . . . . . . ."
+  ". . . . . . . . ."
+  ". play-pause . mute-un-mute . volume . . ."
+  ". . . . . . . . .";
 }
+@media (max-width: 600px){
+  .main_container{
+    grid-template-columns: 5.5% 2.5% 6.6% 1.4% 0.6% 4.2% 42.3% auto 0.5%;
+  }
+}
+
 .play_pause_btn{
   grid-area: play-pause;
   width: 100%;
@@ -42,6 +48,16 @@
 }
 .track_select_wrapper{
   grid-area: track-select;
+  background-image: url('../../../../assets/media_player/track_select_bg.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.track_select_wrapper::before {
+  content: '';
+  display: block;
+  height: 22%;
+  width: 100%;
 }
 .track_select_btn{
   color: white;
